# scotty-api

./: README.md  scotty-api.cabal
src/: ApiTypes.hs  InMemoryData.hs  Main.hs
